lang/tests/compile_fail/bare_op_arg.stderr
error: op arg `mint` requires a value: `mint = ...`. Bare flags are not supported in op groups
  --> tests/compile_fail/bare_op_arg.rs:12:21
   |
12 |     #[account(token(mint, authority = authority))]
   |                     ^^^^

error[E0432]: unresolved import `quasar_spl`
 --> tests/compile_fail/bare_op_arg.rs:3:5
  |
3 | use quasar_spl::{TokenProgram, *};
  |     ^^^^^^^^^^ use of unresolved module or unlinked crate `quasar_spl`
  |
  = help: if you wanted to use a crate named `quasar_spl`, use `cargo add quasar_spl` to add it to your `Cargo.toml`
